--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".PlaceOffersActivity">
+        <activity android:name=".ShoppingListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,11 +20,12 @@
         <activity
             android:name=".PlaceOfferOverviewActivity"
             android:parentActivityName=".PlaceOffersActivity" />
-        <activity android:name=".ShoppingListActivity" />
+        <activity android:name=".PlaceOffersActivity" />
         <activity android:name=".ShoppingItemOverviewActivity" />
         <activity
             android:name=".NewPlaceOfferActivity"
             android:parentActivityName=".PlaceOffersActivity" />
+        <activity android:name=".NewShoppingItemActivity"></activity>
     </application>
 
 </manifest>
