--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyACF0eBzPtMZIbnjc0hAcnt3cnHh0L6VjQ" />
+
         <activity android:name=".EventActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,9 +32,11 @@
             android:parentActivityName=".EventActivity" />
         <activity
             android:name=".NewPlaceOfferActivity"
+            android:label="New place offer"
             android:parentActivityName=".EventActivity" />
         <activity
             android:name=".NewShoppingItemActivity"
+            android:label="New shopping item"
             android:parentActivityName=".EventActivity" />
     </application>
 
