--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,9 @@
 
     <application
         android:allowBackup="true"
-
         android:label="@string/app_name"
-
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +15,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MyEventsActivity" />
-        <activity android:name=".MyEventsListViewActivity"></activity>
+        <activity android:name=".MyEventsListViewActivity" />
+        <activity android:name=".AddNewEventActivity"></activity>
     </application>
 
 </manifest>
