open new activity on fab

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         </activity>
         <activity android:name=".MyEventsActivity" />
         <activity android:name=".MyEventsListViewActivity" />
-        <activity android:name=".AddNewEventActivity"></activity>
+        <activity android:name=".AddNewEventActivity" />
+        <activity android:name=".EventOverviewActivity" />
     </application>
 
 </manifest>
