--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
+
+    implementation 'com.google.firebase:firebase-core:15.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
