--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,40 +13,40 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyACF0eBzPtMZIbnjc0hAcnt3cnHh0L6VjQ" />
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".activity.RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EventActivity"/>
+        <activity android:name=".activity.EventActivity"/>
         <activity
-            android:name=".PlaceOfferOverviewActivity"
-            android:parentActivityName=".EventActivity" />
+            android:name=".activity.PlaceOfferOverviewActivity"
+            android:parentActivityName=".activity.EventActivity" />
         <activity
-            android:name=".ShoppingItemOverviewActivity"
-            android:parentActivityName=".EventActivity" />
+            android:name=".activity.ShoppingItemOverviewActivity"
+            android:parentActivityName=".activity.EventActivity" />
         <activity
-            android:name=".NewPlaceOfferActivity"
+            android:name=".activity.NewPlaceOfferActivity"
             android:label="New place offer"
-            android:parentActivityName=".EventActivity" />
+            android:parentActivityName=".activity.EventActivity" />
         <activity
-            android:name=".NewShoppingItemActivity"
+            android:name=".activity.NewShoppingItemActivity"
             android:label="New shopping item"
-            android:parentActivityName=".EventActivity" />
+            android:parentActivityName=".activity.EventActivity" />
         <activity
-            android:name=".EditPlaceOfferActivity"
-            android:parentActivityName=".PlaceOfferOverviewActivity" />
+            android:name=".activity.EditPlaceOfferActivity"
+            android:parentActivityName=".activity.PlaceOfferOverviewActivity" />
         <activity
-            android:name=".EditShoppingItemActivity"
-            android:parentActivityName=".ShoppingItemOverviewActivity" />
-        <activity android:name=".MyEventsActivity" />
-        <activity android:name=".MyEventsListViewActivity" />
-        <activity android:name=".AddNewEventActivity" />
-        <activity android:name=".UserProfileActivity" />
-        <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
+            android:name=".activity.EditShoppingItemActivity"
+            android:parentActivityName=".activity.ShoppingItemOverviewActivity" />
+        <activity android:name=".activity.MyEventsActivity" />
+        <activity android:name=".activity.MyEventsListViewActivity" />
+        <activity android:name=".activity.AddNewEventActivity" />
+        <activity android:name=".activity.UserProfileActivity" />
+        <!--<activity android:name=".activity.RegisterActivity"></activity>-->
+        <activity android:name=".activity.LoginActivity"></activity>
     </application>
 
 </manifest>
