--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyACF0eBzPtMZIbnjc0hAcnt3cnHh0L6VjQ" />
 
-        <activity android:name=".activity.LoginActivity">
+        <activity android:name=".activity.AddNewEventActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -51,7 +51,7 @@
             android:name=".activity.InvitationsActivity"
             android:parentActivityName=".activity.MainActivity" />
         <activity android:name=".activity.InvitationActivity"></activity>
-        <activity android:name=".activity.AddNewEventActivity" />
+
         <activity android:name=".activity.UserProfileActivity" />
         <activity android:name=".activity.RegisterActivity"></activity>
 
