--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyACF0eBzPtMZIbnjc0hAcnt3cnHh0L6VjQ" />
 
-        <activity android:name=".activity.AddNewEventActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -44,6 +44,7 @@
         <activity
             android:name=".activity.EditShoppingItemActivity"
             android:parentActivityName=".activity.ShoppingItemOverviewActivity" />
+        <activity android:name=".activity.AddNewEventActivity" />
         <activity android:name=".activity.MyEventsActivity" />
         <activity android:name=".activity.MyEventsListViewActivity" />
         <activity android:name=".activity.InvitationListViewActivity" />
