--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,18 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyACF0eBzPtMZIbnjc0hAcnt3cnHh0L6VjQ" />
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.EventsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.EventActivity"/>
+        <activity
+            android:name=".activity.AddNewEventActivity"
+            android:parentActivityName=".activity.EventsActivity"/>
+        <activity
+            android:name=".activity.EventActivity"
+            android:parentActivityName=".activity.EventsActivity" />
         <activity
             android:name=".activity.PlaceOfferOverviewActivity"
             android:parentActivityName=".activity.EventActivity" />
@@ -44,18 +48,13 @@
         <activity
             android:name=".activity.EditShoppingItemActivity"
             android:parentActivityName=".activity.ShoppingItemOverviewActivity" />
-        <activity android:name=".activity.AddNewEventActivity" />
-        <activity android:name=".activity.MyEventsActivity" />
-        <activity android:name=".activity.MyEventsListViewActivity" />
         <activity android:name=".activity.InvitationListViewActivity" />
         <activity
             android:name=".activity.InvitationsActivity"
             android:parentActivityName=".activity.MainActivity" />
         <activity android:name=".activity.InvitationActivity"></activity>
-
         <activity android:name=".activity.UserProfileActivity" />
         <activity android:name=".activity.RegisterActivity"></activity>
-
     </application>
 
 </manifest>
