--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,15 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity android:name=".activity.MainActivity"/>
-        <activity android:name=".activity.EventActivity"/>
-
         <activity
             android:name=".activity.AddNewEventActivity"
             android:parentActivityName=".activity.EventsActivity"/>
-
+        <activity
+            android:name=".activity.EventActivity"
+            android:parentActivityName=".activity.EventsActivity" />
 
         <activity
             android:name=".activity.PlaceOfferOverviewActivity"
