--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.0'
     // Glide image library
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.firebaseui:firebase-ui-storage:0.6.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
