--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
