--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,12 @@
         <activity android:name=".activity.InvitationActivity" />
         <activity android:name=".activity.UserProfileActivity" />
         <activity android:name=".activity.UpdateUserProfileActivity"></activity>
+
+        <service android:name=".services.FCMService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
