--- a/cloud_functions/functions/package.json
+++ b/cloud_functions/functions/package.json
@@ -10,6 +10,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+	"express": "^4.16.3",
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.3"
   },
